--- a/config_files/node2/config.json
+++ b/config_files/node2/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "NodeDefault",
-  "port": "5555",
+  "name": "Node1",
+  "port": "5001",
   "known_peers": [
     "http://localhost:5000",
     "http://localhost:5001"
