--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,14 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "editor.accessibilityPageSize": 10,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
   
 }
